# ixian-docker

./: .coveragerc  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-setup.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: conf.py  config.md  docker.md  index.rst  npm.md  python.md  tasks.md  webpack.md
docs/advanced/: build_stages.rst  image_layout.rst  modules.rst
docs/intro/: building_images.rst  registries.rst  setup.rst  usage.rst
docs/modules/: black.rst  django.rst  docker.rst  eslint.rst  jest.rst  npm.rst  prettier.rst  pytest.rst  python.rst  webpack.rst
ixian_docker/: exceptions.py
ixian_docker/modules/black/: __init__.py  config.py  tasks.py
ixian_docker/modules/bower/: __init__.py  config.py  tasks.py
ixian_docker/modules/django/: config.py  tasks.py
ixian_docker/modules/docker/: __init__.py  checker.py  config.py  tasks.py
ixian_docker/modules/eslint/: __init__.py  config.py  tasks.py
ixian_docker/modules/jest/: __init__.py  config.py  tasks.py
ixian_docker/tests/: Dockerfile.failure  Dockerfile.two  conftest.py  event_streams.py
ixian_docker/utils/: net.py
power_shovel/: config.py  decorators.py  module.py  task.py
power_shovel/check/: checker.py
power_shovel/modules/: javascript.py
power_shovel/test/: test_checker.py  test_task.py
power_shovel/utils/: decorators.py  process.py
power_shovel_docker/: __init__.py  conftest.py
power_shovel_docker/tests/: Dockerfile.one
power_shovel_docker/utils/: net.py  print.py
(+170 files in other folders)
