[metadata]
name = power_shovel_docker
author = Peter Krenesky
author-email = kreneskyp@gmail.com
summary = Docker modules for jack-tar.
description-file = README.md
home-page = https://github.com/kreneskyp/jack-tar
requires-python = >=3.6
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[coverage:run]
branch = True
source = power_shovel_docker

[coverage:report]
exclude_lines =
    pragma: no cover
    pragma: nocover
show_missing = 1
fail_under = 100

[files]
packages = power_shovel_docker

[pbr]
skip_authors = true
skip_changelog = true
